fix: CSS fix to remove occasional display of horizontal scrollers
Jira Issue DD-1729

--- a/css/common.scss
+++ b/css/common.scss
@@ -128,4 +128,8 @@ div.dt-button-collection{
 
 div.dtsp-panesContainer {
 	width: 100%;
+
+	div.dataTables_wrapper {
+		width: 100%;
+	}
 }
